fixed h1+h2 colors on non-color fade backgrounds

--- a/src/sass/host.scss
+++ b/src/sass/host.scss
@@ -18,6 +18,11 @@
     h1, h2 {
       color: #fff;
     }
+    &.slide_dark {
+      h1, h2 {
+        color: #333;
+      }
+    }
   }
 
   &_header {
