--- a/src/sass/player.scss
+++ b/src/sass/player.scss
@@ -146,14 +146,23 @@
   }
 
   &--select_answers {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
     min-height: 92vh;
+    h2 {
+      padding: 1rem;
+      text-align: center;
+      flex-shrink: 2;
+    }
     &-answers {
-      align-items: center;
       color: #fff;
       display: flex;
       font-size: 2rem;
       flex-wrap: wrap;
-      height: 82vh;
+      flex: 2 1 auto;
+      align-items: stretch;
       justify-content: space-around;
       text-shadow: 0 0 3px rgba(0,0,0,.5);
 
@@ -165,8 +174,8 @@
         cursor: pointer;
         display: flex;
         flex-wrap: wrap;
+        flex: 2 1 auto;
         justify-content: center;
-        height: 31%;
         min-height: 11rem;
         text-shadow: 0 0 3px rgba(0,0,0,.5);
         width: 100%;
@@ -183,37 +192,31 @@
 
       &.answers4 {
         button {
-          height: calc(82vh / 2);
           width:  50%;
         }
       }
       &.answers3 {
         button {
-          height: calc(82vh / 3);
         }
       }
       &.answers2 {
         button {
-          height: calc(82vh / 2);
         }
       }
 
       &.nocountdown{
-        min-height: 92vh;
+
         &.answers4 {
           button {
-            height: calc(92vh / 2);
             width:  50%;
           }
         }
         &.answers3 {
           button {
-            height: calc(92vh / 3);
           }
         }
         &.answers2 {
           button {
-            height: calc(92vh / 2);
           }
         }
       }
@@ -221,15 +224,17 @@
     }
     #answerCountdown {
       align-items: center;
-      color: #fff;
-      display: flex;
-      font-size: 2rem;
-      font-family: montserratsemibold;
-      height: 10vh;
-      justify-content: center;
+      animation: gradientspin 1s linear infinite;
       background: rgba(51,51,51,1) radial-gradient(circle, rgba(17,17,17,1) 50%, rgba(51,51,51,1) 50%) no-repeat center center;
       background-size: 0;
-      animation: gradientspin 1s linear infinite;
+      color: #fff;
+      display: flex;
+      flex: 1 1 auto;
+      font-size: 1.75rem;
+      font-family: montserratsemibold;
+      justify-content: center;
+      max-height: 10vh;
+      padding: .125rem 0;
       width: 100%;
     }
   }
